apps/07-game-servers/03-minecraft/proxy.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: proxy
  namespace: games
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: minecraft
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/part-of: minecraft
spec:
  replicas: 2
  serviceName: proxy
  selector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/instance: minecraft
      app.kubernetes.io/name: minecraft
      app.kubernetes.io/part-of: minecraft
  template:
    metadata:
      labels:
        app.kubernetes.io/component: proxy
        app.kubernetes.io/instance: minecraft
        app.kubernetes.io/name: minecraft
        app.kubernetes.io/part-of: minecraft
    spec:
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "gamesOnly"
        effect: "PreferNoSchedule"
      containers:
      - name: proxy
        image: ghcr.io/itzg/mc-proxy:java21-2025.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 25565
          name: minecraft
        volumeMounts:
        - name: data
          mountPath: /server
        - name: config
          mountPath: /config/velocity.toml
          subPath: velocity.toml
          readOnly: true
        - name: forwarding-secret
          mountPath: /config/forwarding.secret
          subPath: forwarding.secret
          readOnly: true
        # readinessProbe:
        #   exec:
        #     command:
        #       - /usr/bin/health.sh
        #   initialDelaySeconds: 10
        #   periodSeconds: 5
        #   failureThreshold: 3
        resources:
          requests:
            cpu: "200m"
            memory: "500Mi"
          limits:
            cpu: "2000m"
            memory: "1000Mi"
      volumes:
        - name: config
          configMap:
            name: proxy-config
            items:
            - key: velocity.toml
              path: velocity.toml
        - name: forwarding-secret
          secret:
            secretName: proxy-secrets
            items:
            - key: forwarding.secret
              path: forwarding.secret
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 1Gi
