apps/07-game-servers/03-minecraft/sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft
  namespace: games
  labels:
    app.kubernetes.io/component: minecraft
    app.kubernetes.io/instance: minecraft
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/part-of: minecraft
spec:
  replicas: 1
  serviceName: minecraft
  selector:
    matchLabels:
      app.kubernetes.io/component: minecraft
      app.kubernetes.io/instance: minecraft
      app.kubernetes.io/name: minecraft
      app.kubernetes.io/part-of: minecraft
  template:
    metadata:
      labels:
        app.kubernetes.io/component: minecraft
        app.kubernetes.io/instance: minecraft
        app.kubernetes.io/name: minecraft
        app.kubernetes.io/part-of: minecraft
    spec:
      nodeSelector:
        kubernetes.io/hostname: games-1
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "gamesOnly"
        effect: "PreferNoSchedule"
      containers:
      - name: mc
        image: itzg/minecraft-server:2025.2.1-java21
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 25565
          name: minecraft
        - containerPort: 8100
          name: bluemap
        volumeMounts:
          - mountPath: /data
            name: data
          - mountPath: /data/simplebackups
            name: backup
            subPath: games/minecraft/cobblemon-plus
        readinessProbe:
          exec:
            command:
              - mc-monitor
              - status
              - --host
              - localhost
              - --port
              - "25565"
          initialDelaySeconds: 120
          periodSeconds: 5
          failureThreshold: 18
        resources:
          limits:
            cpu: 16000m
            memory: 48Gi
          requests:
            cpu: 4000m
            memory: 32Gi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minecraft-cobblemon-plus
      - name: backup
        persistentVolumeClaim:
          claimName: smb-backup
