apps/07-game-servers/03-minecraft/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: games
  labels:
    app.kubernetes.io/component: minecraft
    app.kubernetes.io/instance: minecraft
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/part-of: minecraft
  annotations:
    metallb.universe.tf/allow-shared-ip: "minecraft-192.168.3.241"
    metallb.universe.tf/loadBalancerIPs: 192.168.3.241
spec:
  selector:
    app.kubernetes.io/name: minecraft
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft
    - name: bluemap
      port: 8100
      targetPort: bluemap
  externalTrafficPolicy: Local
  type: LoadBalancer
