apps/07-game-servers/03-minecraft/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft
  namespace: games
spec:
  ingressClassName: nginx-insecure
  tls:
  - hosts:
    - mc.wl.mort.is
  rules:
  - host: mc.wl.mort.is
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft-bluemap
            port:
              number: 8100
